add_executable(jank jank.cpp foo.cpp)
set_property(TARGET jank PROPERTY CXX_STANDARD 17)
target_include_directories(jank PRIVATE ${CMAKE_SOURCE_DIR}/examples)
target_include_directories(jank PRIVATE ${LLVM_INCLUDE_DIRS})
target_compile_definitions(jank PRIVATE ${LLVM_DEFINITIONS})
llvm_map_components_to_libnames(jank_llvm_libs ${LLVM_TARGETS_TO_BUILD} lineeditor)
target_link_libraries(jank PRIVATE clangInterpreter ${jank_llvm_libs})
set_target_properties(jank PROPERTIES ENABLE_EXPORTS 1)
